--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,7 @@ body {
 }
 
 .home_tv_container {
+  width: 100%;
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
@@ -156,7 +157,7 @@ body {
   max-width: 73%;
   max-height: 54%;
   position: absolute;
-  top: 46%;
+  top: 48%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
