--- a/css/login.css
+++ b/css/login.css
@@ -145,3 +145,29 @@ input::placeholder {
   display: inline;
   padding: 0;
 }
+
+/*  footer  */
+.netflix_footer_login {
+  width: 100%;
+  color: #757575;
+  display: none;
+  border-top: 1px solid #757575;
+
+}
+
+.netflix_footer_container_login {
+  width: 90%;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+.netflix_footer_list_login li {
+  margin-left: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin-bottom: 16px;
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
+  font-size: 13px;
+}
