--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,12 @@
 body {
   color: white;
   background-color: black;
+  word-break: keep-all;
 }
 
 #logo {
-  width: 160px;
-  height: 50px;
+  width: 150px;
+  height: 30px;
 }
 
 .home_header {
@@ -62,9 +63,14 @@ body {
   margin-bottom: 30px;
 }
 
+.form_email_container {
+  display: flex;
+  flex-direction: column;
+}
+
 .form_email {
   width: 760px;
-  height: 70px;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,12 +79,13 @@ body {
 
 .form_email input {
   width: 500px;
-  height: 100%;
+  height: 70px;
   background-color: white;
   color: gray;
   line-height: 70px;
   padding-left: 20px;
   font-size: 18px;
+  border-radius: 4px 0 0 4px;
 }
 
 .form_email button {
@@ -87,6 +94,13 @@ body {
   line-height: 70px;
   text-align: center;
   background-color: #e50914;
+  border-radius: 0 4px 4px 0;
+}
+
+.form_email_p {
+  width: 80%; 
+  margin: 0 auto;
+  text-align: center;
 }
 
 /*  tv  */
@@ -434,6 +448,7 @@ body {
   padding-left: 20px;
   font-size: 18px;
   text-align: left;
+  border-radius: 4px 0 0 4px;
 }
 
 .faq_email button {
@@ -442,6 +457,7 @@ body {
   line-height: 70px;
   text-align: center;
   background-color: #e50914;
+  border-radius: 0 4px 4px 0;
 }
 
 /*  footer  */
@@ -512,4 +528,326 @@ body {
   margin: 20px 0;
   font-size: 0.75em;
   line-height: 1em;
+}
+
+
+/*  media */
+
+@media screen and (max-width:949px) {
+
+  h1 {
+    font-size: 50px;
+  }
+
+  .form_email_container {
+    flex-direction: column-reverse;
+  }
+
+  .form_email_p {
+    margin-bottom: 20px;
+  }
+
+  .form_email {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .form_email input {
+    margin-bottom: 20px;
+    border-radius: 4px;
+    height: 60px;
+  }
+
+  .form_email button {
+    border-radius: 4px;
+    width: 180px;
+    height: 44px;
+    line-height: 18px;
+    font-size: 18px;
+  }
+
+  /* main */
+
+  .home_tv {
+    padding: 50px 5%;
+  }
+
+  .home_tv_container {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  
+  .home_tv_content {
+    width: 80%;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .home_tv_content h1 {
+    font-size: 40px;
+    display: block;
+    text-align: center;
+  }
+  
+  .home_tv_content h2 {
+    font-size: 20px;
+    display: block;
+    text-align: center;
+  }
+  
+  .home_tv_img_container {
+    padding-top: 20px;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+  }
+
+  .home_tv_animation_container {
+    margin: 0 auto;
+    min-height: 100px;
+    width: 100%;
+  }
+
+  /*  down  */
+
+  .home_down {
+    padding: 50px 5%;
+  }
+
+  .home_down_container {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+  }
+  
+  .home_down_content {
+    width: 80%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .home_down_content h1 {
+    font-size: 40px;
+    display: block;
+    text-align: center;
+  }
+  
+  .home_down_content h2 {
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  .home_down_img_container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+  }
+
+  .home_down_animation_container {
+    margin: 0 auto;
+    min-height: 100px;
+    width: 100%;
+  }
+
+  /*  device  */
+
+  .home_device {
+    padding: 50px 5%;
+  }
+
+  .home_device_container {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  
+  .home_device_content {
+    width: 80%;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .home_device_content h1 {
+    font-size: 40px;
+    display: block;
+    text-align: center;
+  }
+  
+  .home_device_content h2 {
+    font-size: 20px;
+    display: block;
+    text-align: center;
+  }
+  
+  .home_device_img_container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    padding-top: 30px;
+  }
+
+  .home_device_animation_container {
+    margin: 0 auto;
+    min-height: 100px;
+    width: 100%;
+  }
+
+  /*  faq  */
+  .home_faq_list {
+    width: 90%;
+    max-width: 815px;
+  }
+}
+
+@media screen and (max-width:740px) {
+  .form_email input {
+    height: 44px;
+  }
+}
+
+@media screen and (max-width:549px) {
+  
+  #logo {
+    width: 120px;
+    height: 30px;
+  }
+
+  .home_header {
+    padding: 20px 20px;
+  }
+
+  .home_header button {
+    width: 60px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+  }
+
+  .home_hero {
+    height: 512px;
+  }
+
+  .hero_container {
+    padding: 0 5%;
+  }
+
+  .home_hero_h1 {
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .home_hero_h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .home_hero_h2 span {
+    display: block;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+  
+  h2 {
+    font-size: 18px;
+  }
+
+  .home_tv_content h1 {
+    font-size: 26px;
+  }
+
+  .home_tv_content h2 {
+    font-size: 18px;
+  }
+
+  .home_down_content h1 {
+    font-size: 26px;
+  }
+
+  .home_down_content h2 {
+    font-size: 18px;
+  }
+
+  .home_device_content h1 {
+    font-size: 26px;
+  }
+
+  .home_device_content h2 {
+    font-size: 18px;
+  }
+
+  .form_email {
+    width: 100%;
+  }
+
+  .form_email input {
+    width: 100%;
+  }
+
+  .form_email_p {
+    font-size: 18px;
+    width: 80%;
+    line-height: 24px;
+  }
+
+  /*  faq  */
+  
+  .home_faq {
+    padding: 0;
+  }
+
+  .home_faq_container h1 {
+    margin-top: 40px;
+    font-size: 26px;
+  }
+
+  .home_faq_list {
+    width: 100%;
+    max-width: 815px;
+  }
+
+  .faq_email_container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .faq_email {
+    width: 80%;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .faq_email input {
+    margin-bottom: 20px;
+    border-radius: 4px;
+    height: 60px;
+  }
+
+  .faq_email button {
+    border-radius: 4px;
+    width: 180px;
+    height: 44px;
+    line-height: 18px;
+    font-size: 18px;
+  }
+  
+  .faq_email_container p {
+    margin-bottom: 20px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width:500px) {
+  
 }
