--- a/css/index.css
+++ b/css/index.css
@@ -531,6 +531,9 @@ body {
 }
 
 
+
+
+
 /*  media */
 
 @media screen and (max-width:949px) {
@@ -829,6 +832,7 @@ body {
   }
 
   .faq_email input {
+    width: 100%;
     margin-bottom: 20px;
     border-radius: 4px;
     height: 60px;
