--- a/css/index.css
+++ b/css/index.css
@@ -425,29 +425,31 @@ body {
   cursor: pointer;
 }
 
+
 .faq_email_container {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .faq_email {
   width: 760px;
-  height: 70px;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
   margin-bottom: 20px;
 }
 
 .faq_email input {
   width: 500px;
-  height: 100%;
+  height: 70px;
   background-color: white;
   color: gray;
   line-height: 70px;
   padding-left: 20px;
   font-size: 18px;
-  text-align: left;
   border-radius: 4px 0 0 4px;
 }
 
@@ -458,6 +460,12 @@ body {
   text-align: center;
   background-color: #e50914;
   border-radius: 0 4px 4px 0;
+}
+
+.faq_email_p {
+  width: 80%; 
+  margin: 0 auto;
+  text-align: center;
 }
 
 /*  footer  */
@@ -821,7 +829,6 @@ body {
   }
 
   .faq_email_container {
-    display: flex;
     flex-direction: column-reverse;
   }
 
