--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ body {
 
 .home_hero {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   background-image: url(../img/home/home_large.jpg);
   background-size: cover;
   background-position: center;
@@ -458,7 +458,6 @@ body {
 }
 
 .netflix_footer_container {
-  max-width: 1000px;
   margin: 0 auto;
   padding: 70px 45px;
   border-bottom: none;
@@ -487,7 +486,6 @@ body {
 .netflix_footer_list {
   padding: 0;
   margin: 0;
-  max-width: 1000px;
   font-size: 13px;
   box-sizing: border-box;
 }
@@ -496,7 +494,7 @@ body {
   margin-left: 0;
   box-sizing: border-box;
   padding: 0;
-  margin-bottom: 16px;
+  margin: 16px 0;
   display: inline-block;
   min-width: 100px;
   width: 24%;
@@ -518,6 +516,10 @@ body {
   margin: 20px 0;
   font-size: 0.75em;
   line-height: 1em;
+}
+
+.netflix_footer_text div {
+  margin-top: 4px;
 }
 
 /* accodion */
@@ -792,6 +794,12 @@ body {
   .form_email input {
     height: 44px;
   }
+
+  .faq_email input {
+    height: 44px;
+  }
+
+
 }
 
 @media screen and (max-width:549px) {
@@ -940,7 +948,7 @@ body {
 }
 
 @media screen and (max-width:420px) {
-  
+
   .home_faq_question h2 {
     font-size: 12px;
   }
