--- a/css/index.css
+++ b/css/index.css
@@ -64,12 +64,14 @@ body {
 }
 
 .form_email_container {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .form_email {
-  width: 760px;
+  width: 100%;
   height: auto;
   display: flex;
   justify-content: center;
@@ -78,7 +80,7 @@ body {
 }
 
 .form_email input {
-  width: 500px;
+  width: 80%;
   height: 70px;
   background-color: white;
   color: gray;
@@ -409,6 +411,7 @@ body {
 }
 
 .faq_email_container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -416,7 +419,7 @@ body {
 }
 
 .faq_email {
-  width: 760px;
+  width: 80%;
   height: auto;
   display: flex;
   justify-content: center;
@@ -425,7 +428,7 @@ body {
 }
 
 .faq_email input {
-  width: 500px;
+  width: 100%;
   height: 70px;
   background-color: white;
   color: gray;
@@ -799,6 +802,9 @@ body {
     height: 44px;
   }
 
+  .hero_container {
+    padding-top: 15%;
+  }
 
 }
 
