--- a/css/index.css
+++ b/css/index.css
@@ -40,10 +40,6 @@ body {
 }
 
 .hero_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
@@ -53,6 +49,21 @@ body {
     rgba(0, 0, 0, 0) 60%,
     rgba(0, 0, 0, 0.8) 100%
   );
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero_content_wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 950px;
+  padding: 75px 0;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .home_hero_h1 {
@@ -64,7 +75,7 @@ body {
 }
 
 .form_email_container {
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -410,8 +421,15 @@ body {
   display: block;
 }
 
+.faq_email_container_wrap {
+  display: flex;
+  justify-content: center;
+}
+
 .faq_email_container {
   width: 100%;
+  max-width: 950px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -807,11 +825,11 @@ body {
   }
 
   .home_hero_h1 {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   .home_hero_h2 {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 }
 
