--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ body {
     rgba(0, 0, 0, 0) 60%,
     rgba(0, 0, 0, 0.8) 100%
   );
-  display: flex;
+  display: flex;  
   align-items: center;
   justify-content: center;
 }
@@ -591,6 +591,10 @@ body {
 
 
 
+
+
+
+
 /*  media */
 
 @media screen and (max-width:949px) {
@@ -792,6 +796,7 @@ body {
   .faq_email_container p {
     margin-bottom: 20px;
     font-size: 18px;
+    padding: 0 10%;
   }
 
   .home_faq_question {
@@ -831,6 +836,19 @@ body {
   .home_hero_h2 {
     margin-bottom: 5px;
   }
+
+  .home_tv {
+    padding: 30px 5%;
+  }
+
+  .home_down {
+    padding: 30px 5%;
+  }
+
+  .home_device {
+    padding: 30px 5%;
+  }
+
 }
 
 @media screen and (max-width:549px) {
@@ -905,6 +923,8 @@ body {
     font-size: 18px;
   }
 
+
+
   .form_email {
     width: 100%;
   }
@@ -960,11 +980,9 @@ body {
     font-size: 18px;
   }
   
-  .faq_email_container p {
-    margin-bottom: 20px;
-    font-size: 18px;
+  .faq_email_container {
+    margin-top: 0;
   }
-
 
   .home_faq_question {
     width: 100%;
@@ -981,10 +999,10 @@ body {
 @media screen and (max-width:420px) {
 
   .home_faq_question h2 {
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .home_faq_answer h2 {
-    font-size: 14px;
+    font-size: 18px;
   }
 }
